--- a/love/index.html
+++ b/love/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>献给【这里面写TA的名字】</title>
+		<title>献给汪梦雨</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="text/javascript">if(window.top!== window.self){top.location=self.location;}</script>
    		<link rel="shortcut icon" href="love.ico" type="image/x-icon"/>
@@ -19,32 +19,10 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say">For 【这里面写TA的名字】</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-                        <span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-			        	<span class="say">// 这里面写对TA说的话</span><br>
-                        <span class="say"> </span><br><br>
-                        <span class="say">// 这里面写对TA说的话</span><br>
-						<span class="say"> </span><br><br>
-						<span class="say">// 这里面写对TA说的话
-						<span class="say"> </span><br><br>
-                        <span class="say"><span class="space"></span>——From 【这里面写你的名字】k</span>
-			        </div>
+			        	<span class="say">For 汪梦雨</span><br>
+					<span class="say">虽然我知道我很厉害,但是你也不用羡慕~~</span><br>
+				</div>
                 </div>
-                <div id="clock-box">
-                   现在是我<span class="STYLE1">和</span>你<span class="STYLE1">相识的</span>
-                  <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
