--- a/love/index.html
+++ b/love/index.html
@@ -20,7 +20,11 @@
                 <div id="text">
 			        <div id="code">
 			        	<span class="say">For 汪梦雨</span><br>
-					<span class="say">虽然我知道我很厉害,但是你也不用羡慕~~</span><br>
+					<span class="say">锦瑟无端五十弦 一弦一柱思华年 </span><br>
+					<span class="say">庄生晓梦迷蝴蝶 望帝春心托杜鹃</span><br>
+					<span class="say">沧海月明珠有泪 蓝田日暖玉生烟</span><br>
+					<span class="say">此情可待成追忆 只是当时已惘然</span><br>
+					<span class="say">虽然我知道我很厉害,但是你也不用羡慕</span><br>
 				</div>
                 </div>
               </div>
