--- a/love/index.html
+++ b/love/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>献给汪梦雨</title>
+		<title>献给张培堰</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="text/javascript">if(window.top!== window.self){top.location=self.location;}</script>
    		<link rel="shortcut icon" href="love.ico" type="image/x-icon"/>
@@ -19,19 +19,19 @@
             <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			        	<span class="say">For 汪梦雨</span><br>
+			        	<span class="say">For 张培堰:</span><br>
 						<span class="say"> </span><br><br>
-			        	<span class="say">锦瑟无端五十弦  一弦一柱思华年</span><br>
+			        	<span class="say">独在异乡为异客</span><br>
 						<span class="say"> </span><br><br>
-                        <span class="say">庄生晓梦迷蝴蝶  望帝春心托杜鹃</span><br>
+                        <span class="say">每逢佳节倍思亲</span><br>
 						<span class="say"> </span><br><br>
-			        	<span class="say">沧海月明珠有泪  蓝田日暖玉生烟</span><br>
+			        	<span class="say">遥知兄弟登高处</span><br>
 						<span class="say"> </span><br><br>
-			        	<span class="say">此情可待成追忆  只是当时已惘然</span><br>
+			        	<span class="say">遍插茱萸少一人</span><br>
 						<span class="say"> </span><br><br>
 			        	<span class="say">虽然我知道我很厉害,但是你也太不用羡慕</span><br>
 						<span class="say"> </span><br><br>
-			        	<span class="say">最后,祝你心想事成,天天开心~</span><br>
+			        	<span class="say">最后,祝堰哥日日不缺小女生,天天都有好酒喝 by飞翔的企鹅</span><br>
 			        </div>
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
